<?xml version="1.0" encoding="utf-8"?>
<androidx.core.widget.NestedScrollView xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="match_parent">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="vertical"
        android:padding="16dp">

        <TextView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/label_ffmpeg_binary"
            android:textAppearance="?attr/textAppearanceTitleMedium" />

        <TextView
            android:id="@+id/tvBinaryVersion"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:padding="4dp"
            android:text="@string/text_waiting_binary"
            android:textAppearance="?attr/textAppearanceLabelSmall" />

        <com.google.android.material.button.MaterialButton
            android:id="@+id/btnMediaCodecDiagnostics"
            style="@style/Widget.Material3.Button.TonalButton"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="8dp"
            app:shapeAppearance="@style/ShapeAppearance.App.Rectangular"
            app:backgroundTint="#80386567"
            android:text="@string/btn_mediacodec_diagnostics" />

        <com.google.android.material.divider.MaterialDivider
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginVertical="16dp" />

        <com.google.android.material.button.MaterialButton
            android:id="@+id/btnSelectInput1"
            style="@style/Widget.Material3.Button.TonalButton"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            app:shapeAppearance="@style/ShapeAppearance.App.Rectangular"
            app:backgroundTint="#80D3D3D3"
            android:text="@string/btn_select_input_1" />

        <TextView
            android:id="@+id/tvInput1"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:padding="4dp"
            android:text="@string/text_none"
            android:textAppearance="?attr/textAppearanceBodySmall" />

        <com.google.android.material.button.MaterialButton
            android:id="@+id/btnSelectInput2"
            style="@style/Widget.Material3.Button.TonalButton"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="8dp"
            app:shapeAppearance="@style/ShapeAppearance.App.Rectangular"
            app:backgroundTint="#80D3D3D3"
            android:text="@string/btn_select_input_2" />

        <TextView
            android:id="@+id/tvInput2"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:padding="4dp"
            android:text="@string/text_none"
            android:textAppearance="?attr/textAppearanceBodySmall" />

        <com.google.android.material.divider.MaterialDivider
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginVertical="16dp" />

        <TextView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/title_templates_management"
            android:textAppearance="?attr/textAppearanceTitleMedium" />

        <com.google.android.material.textfield.TextInputLayout
            style="@style/Widget.App.TextInputLayout.OutlinedBox.ExposedDropdownMenu"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="8dp"
            android:hint="@string/hint_template">

            <AutoCompleteTextView
                android:id="@+id/spinnerTemplates"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:inputType="none" />

        </com.google.android.material.textfield.TextInputLayout>

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="8dp"
            android:orientation="horizontal">

            <com.google.android.material.button.MaterialButton
                android:id="@+id/btnSaveTemplate"
                style="@style/Widget.Material3.Button.TextButton"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:text="@string/btn_save" />

            <com.google.android.material.button.MaterialButton
                android:id="@+id/btnDeleteTemplate"
                style="@style/Widget.Material3.Button.TextButton"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:text="@string/btn_delete" />

            <com.google.android.material.button.MaterialButton
                android:id="@+id/btnExportTemplates"
                style="@style/Widget.Material3.Button.TextButton"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:text="@string/btn_export" />

            <com.google.android.material.button.MaterialButton
                android:id="@+id/btnImportTemplates"
                style="@style/Widget.Material3.Button.TextButton"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:text="@string/btn_import" />

        </LinearLayout>

        <com.google.android.material.textfield.TextInputLayout
            style="@style/Widget.Material3.TextInputLayout.OutlinedBox"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="8dp"
            android:hint="@string/hint_template_name"
            app:boxStrokeColor="@color/text_input_stroke_color">

            <com.google.android.material.textfield.TextInputEditText
                android:id="@+id/etTemplateName"
                android:layout_width="match_parent"
                android:layout_height="wrap_content" />

        </com.google.android.material.textfield.TextInputLayout>

        <com.google.android.material.textfield.TextInputLayout
            style="@style/Widget.Material3.TextInputLayout.OutlinedBox"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="8dp"
            android:hint="@string/hint_template_pattern"
            app:boxStrokeColor="@color/text_input_stroke_color">

            <com.google.android.material.textfield.TextInputEditText
                android:id="@+id/etTemplatePattern"
                android:layout_width="match_parent"
                android:layout_height="wrap_content" />

        </com.google.android.material.textfield.TextInputLayout>

        <com.google.android.material.divider.MaterialDivider
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginVertical="16dp" />

        <TextView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/title_review_command"
            android:textAppearance="?attr/textAppearanceTitleMedium" />

        <com.google.android.material.textfield.TextInputLayout
            style="@style/Widget.Material3.TextInputLayout.OutlinedBox"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="8dp"
            android:hint="@string/hint_final_command"
            app:boxStrokeColor="@color/text_input_stroke_color">

            <com.google.android.material.textfield.TextInputEditText
                android:id="@+id/etReviewCommand"
                android:layout_width="match_parent"
                android:layout_height="wrap_content" />

        </com.google.android.material.textfield.TextInputLayout>

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="16dp"
            android:orientation="horizontal">

            <com.google.android.material.button.MaterialButton
                android:id="@+id/btnReview"
                style="@style/Widget.Material3.Button.ElevatedButton"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                app:shapeAppearance="@style/ShapeAppearance.App.Rectangular"
                android:layout_marginEnd="8dp"
                android:text="@string/btn_review" />

            <com.google.android.material.button.MaterialButton
                android:id="@+id/btnClear"
                style="@style/Widget.Material3.Button.ElevatedButton"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                app:shapeAppearance="@style/ShapeAppearance.App.Rectangular"
                android:layout_marginEnd="8dp"
                android:text="@string/btn_clear" />

            <com.google.android.material.button.MaterialButton
                android:id="@+id/btnRun"
                style="@style/Widget.Material3.Button"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                app:shapeAppearance="@style/ShapeAppearance.App.Rectangular"
                android:text="@string/btn_run" />

        </LinearLayout>
    </LinearLayout>
</androidx.core.widget.NestedScrollView>
